--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+ <p>My current favourite song is <a href="https://www.youtube.com/watch?v=VbfpW0pbvaU">stitches.</p>
 
 </body>
 
